samples/_failures_safe/1761502804_e82ceb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80bec672.c: In function ‘main’:
./samples/SAFE/__tmp_80bec672.c:125:65: error: ‘MAX’ undeclared (first use in this function)
  125 |             cols2 = read_int("Enter columns for matrix 2: ", 1, MAX
      |                                                                 ^~~
./samples/SAFE/__tmp_80bec672.c:125:65: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_80bec672.c:125:68: error: expected ‘)’ at end of input
  125 |             cols2 = read_int("Enter columns for matrix 2: ", 1, MAX
      |                             ~                                      ^
      |                                                                    )
./samples/SAFE/__tmp_80bec672.c:125:13: error: expected declaration or statement at end of input
  125 |             cols2 = read_int("Enter columns for matrix 2: ", 1, MAX
      |             ^~~~~
./samples/SAFE/__tmp_80bec672.c:125:13: error: expected declaration or statement at end of input
